WHAT DO YOU WANT FROM ME GIT, JESUS

--- a/_locales/en/messages.json
+++ b/_locales/en/messages.json
@@ -1,5 +1,5 @@
 {
     "app_description": {
-        "message": "chromespring is a formspring.me extension for Google Chrome."
+        "message": "Kittens For Work allows you to browse the internet safely and cutely!"
     }
 }
